--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepackage": "node deployment/createSAMConfiguration.js > samconfig.toml",
     "package": "sam package",
     "predeploy": "npm run package",
-    "deploy": "SAM_BUCKET=heic-code-build sam deploy --s3-bucket heic-code-build"
+    "deploy": "SAM_BUCKET=heic-code-build sam deploy --s3-bucket heic-code-build --debug"
   },
   "repository": {
     "type": "git",
