--- a/layer/Makefile
+++ b/layer/Makefile
@@ -1,52 +1,17 @@
-# Library Versions
-WEBP_VERSION=1.3.2
-LIBDE265_VERSION=1.0.12
-LIBHEIF_VERSION=1.12.0
-VIPS_VERSION=8.12.2
-SHARP_VERSION=0.30.7
+# Install and enable the EPEL RPM package on Amazon Linux 2
+yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
 
-PREFIX_PATH=/opt
+# Install the RPM Fusion configuration package
+yum install https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm
 
-export PKG_CONFIG_PATH=$(PREFIX_PATH)/lib/pkgconfig
+# Install the Remi repository configuration package
+yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm
 
-build-SharpHEICLayer: libvips
-	mkdir -p "$(ARTIFACTS_DIR)/nodejs"
-	mkdir -p "$(ARTIFACTS_DIR)/lib"
+# Install the yum-utils package (for the yum-config-manager command)
+yum install yum-utils
 
-	# sharp uses several of the libs we installed or compiled. extract the full list and copy all of those into /opt/lib
-	# extract list with ldd from sharp.node, manipulate a bit with sed to only get the absolute paths, then copy
-	LD_LIBRARY_PATH=$(PREFIX_PATH)/lib npm --prefix "$(ARTIFACTS_DIR)/nodejs/" install sharp@$(SHARP_VERSION)
-	LD_LIBRARY_PATH=$(PREFIX_PATH)/lib ldd $(ARTIFACTS_DIR)/nodejs/node_modules/sharp/build/Release/sharp-linux-x64.node | sed -nE "s/^[^\/\n]*(\/[^ ]+)(.*)/\1/p" | xargs cp -t $(ARTIFACTS_DIR)/lib
+# Enable Remi's RPM repository
+yum-config-manager --enable remi
 
-libwebp:
-	curl -L https://github.com/webmproject/libwebp/archive/v$(WEBP_VERSION).tar.gz | tar zx
-	cd libwebp-$(WEBP_VERSION) && ./autogen.sh && ./configure --enable-libwebpmux --prefix=$(PREFIX_PATH) && make V=0 && make install
-
-libde265:
-	# libde265
-	curl -L https://github.com/strukturag/libde265/releases/download/v$(LIBDE265_VERSION)/libde265-$(LIBDE265_VERSION).tar.gz | tar zx
-	cd libde265-$(LIBDE265_VERSION) && ./autogen.sh && ./configure --disable-dec265 --disable-sherlock265 --prefix=$(PREFIX_PATH) && make V=0 && make install
-
-libheif: libde265
-	# libheif
-	curl -L https://github.com/strukturag/libheif/releases/download/v$(LIBHEIF_VERSION)/libheif-$(LIBHEIF_VERSION).tar.gz | tar zx
-	cd libheif-$(LIBHEIF_VERSION) && ./autogen.sh && ./configure --prefix=$(PREFIX_PATH) && make V=0 && make install
-
-libvips: installLib libheif libwebp
-	# libvips
-	curl -L https://github.com/libvips/libvips/releases/download/v$(VIPS_VERSION)/vips-$(VIPS_VERSION).tar.gz | tar zx
-	cd vips-$(VIPS_VERSION) && ./configure --prefix=$(PREFIX_PATH) && make V=0 && make install
-
-installLib:
-	yum install -y yum-plugin-ovl && \
-	yum install -y \
-		glib2-devel \
-		expat-devel \
-		libjpeg-devel \
-		libjpeg-turbo-devel \
-		libpng-devel \
-		giflib-devel \
-		libexif-devel \
-		librsvg2-devel \
-		libtiff-devel \
-		lcms2-devel
+# Install libvips with HEIC support (+ development files and command-line tools)
+yum install vips vips-heif vips-devel vips-tools
