add libwebp dependency

--- a/layer/Makefile
+++ b/layer/Makefile
@@ -32,7 +32,7 @@ libheif: libde265
 	curl -L https://github.com/strukturag/libheif/releases/download/v$(LIBHEIF_VERSION)/libheif-$(LIBHEIF_VERSION).tar.gz | tar zx
 	cd libheif-$(LIBHEIF_VERSION) && ./autogen.sh && ./configure --prefix=$(PREFIX_PATH) && make V=0 && make install
 
-libvips: installLib
+libvips: installLib libwebp
 	# Install and enable the EPEL RPM package on Amazon Linux 2
 	yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
 
