--- a/layer/Makefile
+++ b/layer/Makefile
@@ -9,30 +9,7 @@ PREFIX_PATH=/opt
 
 export PKG_CONFIG_PATH=$(PREFIX_PATH)/lib/pkgconfig
 
-build-SharpHEICLayer: libvips
-	mkdir -p "$(ARTIFACTS_DIR)/nodejs"
-	mkdir -p "$(ARTIFACTS_DIR)/lib"
-
-	# sharp uses several of the libs we installed or compiled. extract the full list and copy all of those into /opt/lib
-	# extract list with ldd from sharp.node, manipulate a bit with sed to only get the absolute paths, then copy
-	LD_LIBRARY_PATH=$(PREFIX_PATH)/lib npm --prefix "$(ARTIFACTS_DIR)/nodejs/" install sharp@$(SHARP_VERSION)
-	LD_LIBRARY_PATH=$(PREFIX_PATH)/lib ldd $(ARTIFACTS_DIR)/nodejs/node_modules/sharp/build/Release/sharp-linux-x64.node | sed -nE "s/^[^\/\n]*(\/[^ ]+)(.*)/\1/p" | xargs cp -t $(ARTIFACTS_DIR)/lib
-
-libwebp:
-	curl -L https://github.com/webmproject/libwebp/archive/v$(WEBP_VERSION).tar.gz | tar zx
-	cd libwebp-$(WEBP_VERSION) && ./autogen.sh && ./configure --enable-libwebpmux --prefix=$(PREFIX_PATH) && make V=0 && make install
-
-libde265:
-	# libde265
-	curl -L https://github.com/strukturag/libde265/releases/download/v$(LIBDE265_VERSION)/libde265-$(LIBDE265_VERSION).tar.gz | tar zx
-	cd libde265-$(LIBDE265_VERSION) && ./autogen.sh && ./configure --disable-dec265 --disable-sherlock265 --prefix=$(PREFIX_PATH) && make V=0 && make install
-
-libheif: libde265
-	# libheif
-	curl -L https://github.com/strukturag/libheif/releases/download/v$(LIBHEIF_VERSION)/libheif-$(LIBHEIF_VERSION).tar.gz | tar zx
-	cd libheif-$(LIBHEIF_VERSION) && ./autogen.sh && ./configure --prefix=$(PREFIX_PATH) && make V=0 && make install
-
-libvips:
+build-SharpHEICLayer:
 	yum remove -y libwebp
 
 	# Install and enable the EPEL RPM package on Amazon Linux 2
@@ -52,17 +29,3 @@ libvips:
 
 	# Install libvips with HEIC support (+ development files and command-line tools)
 	yum install -y vips vips-heif vips-devel vips-tools
-
-installLib:
-	yum install -y yum-plugin-ovl && \
-	yum install -y \
-		glib2-devel \
-		expat-devel \
-		libjpeg-devel \
-		libjpeg-turbo-devel \
-		libpng-devel \
-		giflib-devel \
-		libexif-devel \
-		librsvg2-devel \
-		libtiff-devel \
-		lcms2-devel
