--- a/layer/Makefile
+++ b/layer/Makefile
@@ -9,37 +9,44 @@ PREFIX_PATH=/opt
 
 export PKG_CONFIG_PATH=$(PREFIX_PATH)/lib/pkgconfig
 
-build-SharpHEICLayer:
-	yum remove -y libwebp
-
-	# Install and enable the EPEL RPM package on Amazon Linux 2
-	yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-
-	# Install the RPM Fusion configuration package
-	yum install -y https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm
-
-	# Install the Remi repository configuration package
-	yum install -y http://rpms.remirepo.net/enterprise/remi-release-7.rpm
-
-	# Install the yum-utils package (for the yum-config-manager command)
-	yum install -y yum-utils
-
-	# Enable Remi's RPM repository
-	yum-config-manager --enable remi
-
-	# Install libvips with HEIC support (+ development files and command-line tools)
-	yum install -y libheif libheif-devel vips vips-heif vips-devel vips-tools
-
-	mkdir -p "$(ARTIFACTS_DIR)/bin"
+build-SharpHEICLayer: libvips
+	mkdir -p "$(ARTIFACTS_DIR)/nodejs"
 	mkdir -p "$(ARTIFACTS_DIR)/lib"
-	mkdir -p "$(ARTIFACTS_DIR)/nodejs/node16"
 
-	cp /usr/bin/vips /usr/bin/vipsedit /usr/bin/vipsheader /usr/bin/vipsprofile /usr/bin/vipsthumbnail $(ARTIFACTS_DIR)/bin
+	# sharp uses several of the libs we installed or compiled. extract the full list and copy all of those into /opt/lib
+	# extract list with ldd from sharp.node, manipulate a bit with sed to only get the absolute paths, then copy
+	LD_LIBRARY_PATH=$(PREFIX_PATH)/lib npm --prefix "$(ARTIFACTS_DIR)/nodejs/" install sharp@$(SHARP_VERSION)
+	LD_LIBRARY_PATH=$(PREFIX_PATH)/lib ldd $(ARTIFACTS_DIR)/nodejs/node_modules/sharp/build/Release/sharp-linux-x64.node | sed -nE "s/^[^\/\n]*(\/[^ ]+)(.*)/\1/p" | xargs cp -t $(ARTIFACTS_DIR)/lib
 
-	pkg-config --modversion vips-cpp
-	vips -l | grep heif
+libwebp:
+	curl -L https://github.com/webmproject/libwebp/archive/v$(WEBP_VERSION).tar.gz | tar zx
+	cd libwebp-$(WEBP_VERSION) && ./autogen.sh && ./configure --enable-libwebpmux --prefix=$(PREFIX_PATH) && make V=0 && make install
 
-	cp /lib64/libvips-cpp.so.42 $(ARTIFACTS_DIR)/lib
-	cp /lib64/libvips-cpp.so $(ARTIFACTS_DIR)/lib
+libde265:
+	# libde265
+	curl -L https://github.com/strukturag/libde265/releases/download/v$(LIBDE265_VERSION)/libde265-$(LIBDE265_VERSION).tar.gz | tar zx
+	cd libde265-$(LIBDE265_VERSION) && ./autogen.sh && ./configure --disable-dec265 --disable-sherlock265 --prefix=$(PREFIX_PATH) && make V=0 && make install
 
-	npm --prefix $(ARTIFACTS_DIR)/nodejs/node16/ install --os=linux --cpu=x64 sharp@0.32.6
+libheif: libde265
+	# libheif
+	curl -L https://github.com/strukturag/libheif/releases/download/v$(LIBHEIF_VERSION)/libheif-$(LIBHEIF_VERSION).tar.gz | tar zx
+	cd libheif-$(LIBHEIF_VERSION) && ./autogen.sh && ./configure --prefix=$(PREFIX_PATH) && make V=0 && make install
+
+libvips: installLib libheif libwebp
+	# libvips
+	curl -L https://github.com/libvips/libvips/releases/download/v$(VIPS_VERSION)/vips-$(VIPS_VERSION).tar.gz | tar zx
+	cd vips-$(VIPS_VERSION) && ./configure --prefix=$(PREFIX_PATH) && make V=0 && make install
+
+installLib:
+	yum install -y yum-plugin-ovl && \
+	yum install -y \
+		glib2-devel \
+		expat-devel \
+		libjpeg-devel \
+		libjpeg-turbo-devel \
+		libpng-devel \
+		giflib-devel \
+		libexif-devel \
+		librsvg2-devel \
+		libtiff-devel \
+		lcms2-devel
